--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <ul>
                 <li><a href="index.htm">Forside</a></li>
                 <li><a href="biografier.htm">Biografier</a></li>
+                <img src="Images/370220474_1690688451422071_1171698750950191073_n (1).png" alt="">
                 <li><a href="stifteren.htm">Stifteren</a></li>
                 <li><a href="kontakt.htm">Kontakt</a></li>
             </ul>
@@ -29,6 +30,7 @@
         </section>
     </main>
     <footer>
+        <img src="Images/Kystfiskeren.jpg" alt="">
         <p>&copy; 2022 Fars Grej. Alle rettigheder reserveret.</p>
     </footer>
 </body>
