--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
         <h1>Fars Grej</h1>
         <nav>
             <ul>
-                <li><a href="index.htm">Forside</a></li>
-                <li><a href="biografier.htm">Biografier</a></li>
+                <li><a href="index.htm">Guide</a></li>
+                <li><a href="biografier.htm">Shop</a></li>
                 <img src="Images/370220474_1690688451422071_1171698750950191073_n (1).png" alt="">
-                <li><a href="stifteren.htm">Stifteren</a></li>
-                <li><a href="kontakt.htm">Kontakt</a></li>
+                <li><a href="stifteren.htm">Comunity</a></li>
+                <li><a href="kontakt.htm">Om os</a></li>
             </ul>
         </nav>
     </header>
+    <h1>Shoppen</h1>
     <main>
         <section>
             <h2>Nyheder</h2>
