--- a/Shoppen.html
+++ b/Shoppen.html
@@ -19,10 +19,13 @@
             </ul>
         </nav>
     </header>
+    <div class="category">Fiskestænger</div>
+
     <div class="product" id="product1">
         <h2>Shimano Catana EX TE:</h2>
         <p>Shimano Catana EX-TE er en teleskopisk fiskestang kendt for sin pålidelige kvalitet og alsidighed, ideel til let kystfiskeri og transport. Den tilbyder god følsomhed og er nem at håndtere, hvilket gør den velegnet til både begyndere og erfarne fiskere.</p>
         <p>Pris: 1000 dkk</p>
+        <img src="" alt="">
         <span class="like-btn" onclick="toggleLike('product1')">Like</span>
     </div>
     
@@ -32,10 +35,20 @@
         <p>Pris: 1000 dkk</p>
         <span class="like-btn" onclick="toggleLike('product2')">Like</span>
     </div>
-    
+
+    <div class="category">Fiskehjul</div>
+
     <div class="product" id="product3">
         <h2>Shimano Stradic FL: </h2>
         <p>Shimano Stradic FL er et fremragende spinningshjul, der kombinerer holdbarhed, præcision og følsomhed. Den er elsket af fiskere for sin pålidelige ydeevne og er ideel til forskellige fiskerioplevelser.</p>
+        <p>Pris: 1000 dkk</p>
+        <span class="like-btn" onclick="toggleLike('product3')">Like</span>
+    </div>
+
+
+    <div class="product" id="product3">
+        <h2>Shimano Nasci 4000 - c5000: </h2>
+        <p>Shimano Nasci 4000 og 5000 hjul er pålidelige og alsidige, velegnede til ferskvands- og let saltvandsfiskeri. De har en solid konstruktion og effektive bremser, og de er populære blandt fiskere, der søger kvalitet til rimelige priser.</p>
         <p>Pris: 1000 dkk</p>
         <span class="like-btn" onclick="toggleLike('product3')">Like</span>
     </div>
