--- a/Shoppen.html
+++ b/Shoppen.html
@@ -25,7 +25,7 @@
         <h2>Shimano Catana EX TE:</h2>
         <p>Shimano Catana EX-TE er en teleskopisk fiskestang kendt for sin pålidelige kvalitet og alsidighed, ideel til let kystfiskeri og transport. Den tilbyder god følsomhed og er nem at håndtere, hvilket gør den velegnet til både begyndere og erfarne fiskere.</p>
         <p>Pris: 1000 dkk</p>
-        <img src="" alt="">
+        <img src="/Images/Fiskestang1.png" alt="">
         <span class="like-btn" onclick="toggleLike('product1')">Like</span>
     </div>
     
@@ -33,6 +33,7 @@
         <h2>STC Mini:</h2>
         <p>STC Mini er en rejse-spindestangserie fra Shimano, der tilbyder kompakthed og kvalitet. Ideel til fiskere på farten, den kombinerer bærbarhed med høj ydeevne og alsidighed for fiskeri overalt.</p>
         <p>Pris: 1000 dkk</p>
+        <img src="/Images/Fiskestang2.png" alt="">
         <span class="like-btn" onclick="toggleLike('product2')">Like</span>
     </div>
 
@@ -42,6 +43,7 @@
         <h2>Shimano Stradic FL: </h2>
         <p>Shimano Stradic FL er et fremragende spinningshjul, der kombinerer holdbarhed, præcision og følsomhed. Den er elsket af fiskere for sin pålidelige ydeevne og er ideel til forskellige fiskerioplevelser.</p>
         <p>Pris: 1000 dkk</p>
+        <img src="/Images/fiskehjul1.png" alt="">
         <span class="like-btn" onclick="toggleLike('product3')">Like</span>
     </div>
 
@@ -50,6 +52,7 @@
         <h2>Shimano Nasci 4000 - c5000: </h2>
         <p>Shimano Nasci 4000 og 5000 hjul er pålidelige og alsidige, velegnede til ferskvands- og let saltvandsfiskeri. De har en solid konstruktion og effektive bremser, og de er populære blandt fiskere, der søger kvalitet til rimelige priser.</p>
         <p>Pris: 1000 dkk</p>
+        <img src="/Images/fiskehjul2.png" alt="">
         <span class="like-btn" onclick="toggleLike('product3')">Like</span>
     </div>
 
