--- a/index.html
+++ b/index.html
@@ -7,21 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 
 <body>
-<<div class="topnav" id="myTopnav">
-    <a href="#home" class="active">Hjem</a>
-    <a href="#news">Nyt</a>
-    <a href="#contact">Kontakt</a>
-    <div class="dropdown">
-      <button class="dropbtn">Fag 
-        <i class="fa fa-caret-down"></i>
-      </button>
-      <div class="dropdown-content">
-        <a href="#">UX</a>
-        <a href="#">Design</a>
-        <a href="#">Programering</a>
-      </div>
-    </div> 
-    <a href="#about">Om mig</a>
+<div class="topnav" id="myTopnav">
+    <a href="#home" class="active">Forside</a>
+    <a href="#news">Guide</a>
+    <a href="#contact">Shop</a>
+    <a href="#about">Community</a>
+    <a href="#about">Om os</a>
     <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
   </div>
   
@@ -38,17 +29,11 @@
 
 
 <div class="container">
-    <video autoplay muted loop id="myVideo">
-        <source src="REC.mp4" type="video/mp4">
-        Your browser does not support HTML5 video.
-      </video>
-    <div class="textvideo">
-        <h1 class="overskrift1"> Amalie Sofie Tobar Petersen</h1>
-        <p class="underoverskrift1"> Multimediedesigner</p>
+        <h1 class="overskrift1"> Fars Grej</h1>
+        <p class="underoverskrift1"> Velkommen til dit helt eget fiske univers</p>
     </div>
-  </div> 
     <footer>
-        <img src="Images/Kystfiskeren.jpg" alt="">
+        <img src="/Images/Skærmbillede 2019-10-03 kl_ 08_44_02.webp" alt="">
         <p>&copy; 2022 Fars Grej. Alle rettigheder reserveret.</p>
     </footer>
 </body>
