--- a/Guide.html
+++ b/Guide.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <main>
     <h1>Logo</h1>
-    <h1 class="burgermenu">Burgermenu</h1>
+    <h2 class="header">Guide</h2>
+    <h3>Guide til nybegyndere indenfor fiskeri</h3>
+    <p>Som nybegynder indenfor fiskeri er der mange ting der er vigtige at 
+        kende til, inden du kaster linen for første gang. Vi har lavet den perfekte guide
+        til de gode spots i floder og åer i Midtjylland.</p>
+    <img class="Sø" src="Images/Silkeborgsøer.jpeg" alt="Silkeborgsøer" width="300" height="200"> 
+    </main>
 </body>
 </html>
