--- a/Amalie.html
+++ b/Amalie.html
@@ -23,9 +23,9 @@
 
     <header>
         <div class="topnav" id="myTopnav">
-            <a href="index.html" class="active">Forside</a>
+            <a href="index.html" >Forside</a>
             <a href="Frida.html" >Guide</a>
-            <a href="Amalie.html">Shop</a>
+            <a href="Amalie.html" class="active">Shop</a>
             <a href="Nikolines.html">Community</a>
             <a href="#">Om os</a>
             <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
