--- a/opretSiden.html
+++ b/opretSiden.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="footer.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styleShopFull.css">
+    <link rel="stylesheet" href="Amaliesstyle.css">
+    
     <!-- linket til mine stylesheets -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,7 +37,7 @@
 
     </header>
 
-    
+
     <main>
         <section id="opretForm">
             <div class="boxAround">
