--- a/Frida.html
+++ b/Frida.html
@@ -7,6 +7,7 @@
     <title>Fiskespots</title>
     <link rel="stylesheet" href="Fridasstyle.css">
     <link rel="stylesheet" href="styleShopFull.css">
+    <link rel="stylesheet" href="Amaliesstyle.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet"
@@ -26,8 +27,8 @@
 
     <header>
         <div class="topnav" id="myTopnav">
-            <a href="index.html" class="active">Forside</a>
-            <a href="Frida.html" >Guide</a>
+            <a href="index.html" >Forside</a>
+            <a href="Frida.html" class="active">Guide</a>
             <a href="Amalie.html">Shop</a>
             <a href="Nikolines.html">Community</a>
             <a href="#">Om os</a>
