--- a/Nikolines.html
+++ b/Nikolines.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="styleShopFull.css" />
     <link rel="stylesheet" href="Nikolinesstyle.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,400;0,700;1,700&display=swap" rel="stylesheet">
     <title>Fars Grej</title>
 </head>
 
