--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="Benjaminsstyle.css">
     <link rel="stylesheet" href="styleShopFull.css">
     <link rel="stylesheet" href="Amaliesstyle.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,400;0,700;1,700&display=swap" rel="stylesheet">
 </head>
 
 <body>
