--- a/Frida.html
+++ b/Frida.html
@@ -7,8 +7,9 @@
     <title>Fiskespots</title>
     <link rel="stylesheet" href="Fridasstyle.css">
     <link rel="stylesheet" href="styleShopFull.css">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,400;1,700&family=Merriweather+Sans&family=Nunito+Sans:opsz,wght@6..12,300&family=Roboto+Serif:opsz@8..144&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet"
@@ -43,7 +44,7 @@
                 <br>
                 <p>Som nybegynder indenfor fiskeri er der mange ting der er vigtige at
                     kende til, inden du kaster linen for første gang. Vi har derfor lavet den perfekte guide
-                    til de gode spots i floder og åer i Midtjylland.</p>
+                    til de gode spots i Midtjylland.</p>
                 <img class="img" src="img/Borre_soe.jpg" alt="Borresoe">
                 <h5 class="picture_description">Borre sø</h5>
 
@@ -57,9 +58,24 @@
                     De omkringliggende skove og bakker skaber ro og harmoni,
                     perfekt til en afslappende dag ved vandet. Fiskeri ved disse søer tilbyder forskellige muligheder,
                     herunder fiskeri fra bredden blandt træerne eller udforskning af dybere vandlag med en båd.
+                   <br>
+                    Begge søer har en bred vifte af fiskearter, herunder: </p>
+                    <ul>
+                        <li>
+                            Gedder
+                        </li>
+                        <li>
+                            Aborrer
+                        </li>
+                        <li>
+                            Sandart
+                        </li>
+                        <li>
+                            Skaller
+                        </li>
+                    </ul>
                     <br>
-                    Begge søer har en bred vifte af fiskearter, herunder gedder, aborrer, sandart, karper, skaller og
-                    gedder.
+                    <p>
                     Uanset præferencer er der gode chancer for at fange drømmefisken.
                 </p>
             </article>
